<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/superplayer_super_vod_vtt_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definition"
                android:textSize="16dp"
                android:textColor="@color/white"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/superplayer_ic_float_close"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_quality_one"
                android:layout_width="84dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/HDR"
                android:textSize="12dp"
                android:textColor="#DC3C23"
                android:background="@drawable/selector_vod_quality"/>

            <TextView
                android:id="@+id/tv_quality_two"
                android:layout_width="84dp"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/HD"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:background="@drawable/selector_vod_quality"/>

            <TextView
                android:id="@+id/tv_quality_three"
                android:layout_width="84dp"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/SD"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:background="@drawable/selector_vod_quality"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_quality_four"
                android:layout_width="84dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/fluent"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:background="@drawable/selector_vod_quality"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>