<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/superplayer_super_vod_vtt_bg"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/bullet_screen_font"
                android:textSize="14dp"
                android:textColor="#F3F3F7"/>

            <LinearLayout
                android:id="@+id/ll_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_danmu_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/small"
                    android:textSize="14dp"
                    android:textColor="@color/superplayer_white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_danmu_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/middle"
                    android:textSize="14dp"
                    android:textColor="@color/superplayer_white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_big"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_danmu_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/big"
                    android:textSize="14dp"
                    android:textColor="@color/superplayer_white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/opacity"
                android:textColor="@color/superplayer_white"
                android:textSize="14dp" />

            <SeekBar
                android:id="@+id/superplayer_sb_alpha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="100"
                android:progressDrawable="@drawable/superplayer_biz_video_progressbar"
                android:thumb="@drawable/superplayer_ic_vod_thumb_two"/>

            <TextView
                android:id="@+id/tv_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="100%"
                android:textSize="14dp"
                android:textColor="#F3F3F7"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>